# avibot

./: .gitignore  docker-compose.yml
bot/: Dockerfile  config.py  launcher.py  pyproject.toml
bot/avibot/: __init__.py
bot/avibot/core/: bot.py
bot/avibot/core/data_manager/: __init__.py  db.py  exceptions.py  sqltypes.py
bot/tests/: test_avibot.py
env/: load_env.sh  load_local_env.sh  postgres.env
postgresql/: __init__.py
